# notorious6

./: .gitignore  Cargo.toml  README.md
lib/gl/: build.rs
shaders/: brightness-hue-preserving.glsl  linear.glsl  per-channel-exponential.glsl  stupid_thing.glsl  tmp_bezold_brucke.glsl  tmp_custom-hk.glsl
shaders/inc/: bezold_brucke.hlsl  bezold_brucke_brute_force.glsl  catmull_rom.hlsl  cie1931.glsl  display_transform.hlsl  h-k.hlsl  helmholtz_kohlrausch.hlsl  hlsl_to_glsl.glsl  ictcp.hlsl  ipt.hlsl  lab.hlsl  lms.hlsl  luv.hlsl  math_constants.hlsl  oklab.hlsl  prelude.glsl  srgb.hlsl  xyz.hlsl  ycbcr.hlsl
shaders/lut/: bezold_brucke_lut.glsl
src/: app_state.rs  fbo.rs  file.rs  image.rs  image_loading.rs  image_pool.rs  lut_lib.rs  main.rs  setup.rs  shader.rs  shader_lib.rs  texture.rs
