[package]
name = "notorious6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0"
exr = "1.4.1"
gl = { path = "lib/gl" }
glutin = "0.28"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.11"
regex = "1.5.4"
shader-prepper = "0.2"
simple_logger = "1.13.0"
smol = "1.2.5"
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "92030af" }
failure = "0.1.8"   # for shader-prepper: TODO: NUKE
relative-path = "1.0"
hotwatch = "0.4.6"
bytes = "1.1"