[package]
name = "notorious6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.1"
exr = "1.4.1"
failure = "0.1.8"   # for shader-prepper: TODO: NUKE
gl = { path = "lib/gl" }
glutin = "0.28"
hotwatch = "0.4.6"
jpeg-encoder = "0.4"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.11"
radiant = "0.3"
regex = "1.5.4"
relative-path = "1.0"
shader-prepper = "0.2"
simple_logger = "1.13.0"
smol = "1.2.5"
structopt = "0.3"
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "92030af" }
